--- a/configs/server_config.yaml
+++ b/configs/server_config.yaml
@@ -6,8 +6,7 @@ server:
 
 storage:
   type: "postgres"       # Тип хранилища: postgres, file, или memory
-  connection_string: "postgres://user:password@localhost:5432/gophkeeper"
-  file_path: "data/storage.json"  # Используется, если type=file
+  connection_string: "postgres://postgres:12345678@localhost:5432/gophkeeper"
 
 security:
   jwt_secret: "secret-key"   # Секретный ключ для генерации JWT
